FreeST/test/Programs/InvalidTests/Linearity/EndTwice/EndTwice.fst
main : ()
main = 
    let (x, y) = new @End () in
    close x;
    close x;
    close y;
